# Reporty

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: code-quality.yaml
alembic/: env.py
alembic/versions/: 2910b66071b4_second.py  64f30ecc2527_initial.py  af94a55dce13_initial_migration.py
backend/: main.py
backend/src/: LICENSE  main.py
backend/src/api/: routes.py
backend/src/api/controllers/: __init__.py  profile_controller.py  record_controller.py  report_controller.py  (+1 more)
backend/src/core/: admin.py  config.py  constants.py  dependencies.py
backend/src/database/: base.py  models.py
backend/src/integrations/: ai_service.py  task_tracker_service.py
backend/src/services/: __init__.py  crypto_service.py  record_service.py  report_service.py  user_service.py
src/: main.py
src/api/: record_controller.py  report_controller.py  routes.py  task_controller.py
src/api/controllers/: __init__.py  record_controller.py  report_controller.py
src/api/dto/: __init__.py  record.py  record_dto.py  report.py  report_dto.py  user_dto.py
src/core/: admin.py  config.py  dependencies.py  settings.py
src/database/: base.py  models.py  repositories.py
src/database/repositories/: __init__.py  external_system_repository.py  external_task_repository.py  record_repository.py  report_repository.py
src/dto/auth/: user_dto.py
src/integrations/: ai_service.py  api_llm_service.py
src/services/: __init__.py  record_service.py  report_service.py  user_service.py
(+10 files in other folders)
