[project]
name = "reporty"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"

license = {file = "LICENSE"}
authors = [{name = "Grigoriy Sokolov", email = "Sokolov_Gr@proton.me"}]
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "litestar>=2.16.0",
    "mypy>=1.16.0",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.12",
    "sqladmin-litestar-plugin>=0.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]


[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 4
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "YTT", "ANN", "S", "A", "D"]
ignore = ["ANN102", "D100", "D101", "D104", "D105", "D103", "D102"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
disallow_any_generics = false
ignore_missing_imports = true
follow_untyped_imports = true
